--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h1>O primeiro acompanhamento com relatorios e personalização para cada aluno.</h1>
             <br><p> <span>Flexibilidade</span>, <span>qualidade</span> e <span>acessibilidade</span>.</p>
             <a href="#contact" class="cta-button">
-                <i class="fab fa-whatsapp"></i> Quero Matricular Meu Filho
+                <i class=""></i> Quero Matricular Meu Filho
             </a>
         </div>
     </section>
@@ -50,7 +50,7 @@
                 <p style="font-size:1.15rem; line-height:1.7;">
                     A Click do Saber nasceu a partir da ideia de tornar a educação mais próxima, flexível e acessível para todos. 
                     Somos uma plataforma 100% digital com o objetivo de conectar alunos e professores de forma prática e segura, 
-                    trazendo relatórios de acompanhamento. Somos mais que um reforço: somos um acompanhamento contínuo para o estudante.
+                    trazendo relatórios de acompanhamento. Seu filho não vai apenas assisstir aulas, ele será compreendido e direcionado a evoluir de forma constante
                 </p>
             </div>
         </div>
@@ -147,7 +147,7 @@
         </div>
     </section>
 
-    <footer class="footer"> <div class="footer-container"> <div class="footer-content"> <div class="footer-section"> <h3>Click do Saber</h3> <p>Transformando a educação através da tecnologia e personalização. Conectamos alunos e professores para uma experiência de aprendizado única.</p> <div class="social-links"> <a href="#" class="social-link"> <i class="fab fa-instagram"></i> </a> <a href="#" class="social-link"> <i class="fab fa-linkedin"></i> </a> <a href="#" class="social-link"> <i class="fab fa-whatsapp"></i> </a> <a href="#" class="social-link"> <i class="fab fa-youtube"></i> </a> </div> </div> <div class="footer-section"> <h4>Serviços</h4> <ul class="footer-links"> <li><a href="#">Aulas Particulares</a></li> <li><a href="#">Preparação para ENEM</a></li> <li><a href="#">Reforço Escolar</a></li> <li><a href="#">Aulas Online</a></li> </ul> </div> <div class="footer-section"> <h4>Disciplinas</h4> <ul class="footer-links"> <li><a href="#">Matemática</a></li> <li><a href="#">Física</a></li> <li><a href="#">Química</a></li> <li><a href="#">Inglês</a></li> </ul> </div> <div class="footer-section"> <h4>Contato</h4> <div class="contact-info"> <div class="contact-item"> <i class="fas fa-phone"></i> <span>(71) 99999-9999</span> </div> <div class="contact-item"> <i class="fas fa-envelope"></i> <span>contato@clickdosaber.com</span> </div> <div class="contact-item"> <i class="fas fa-map-marker-alt"></i> <span>Salvador, BA - Brasil</span> </div> </div> </div> </div> <div class="footer-bottom"> <div class="footer-bottom-content"> <p>&copy; 2025 Click do Saber. Todos os direitos reservados.</p> <div class="footer-bottom-links"> <a href="#">Política de Privacidade</a> <a href="#">Termos de Uso</a> <a href="#">Cookies</a> </div> </div> </div> </div> </footer>
+    <footer class="footer"> <div class="footer-container"> <div class="footer-content"> <div class="footer-section"> <h3>Click do Saber</h3> <p>Transformando a educação através da tecnologia e personalização. Conectamos alunos e professores para uma experiência de aprendizado única.</p> <div class="social-links"> <a href="#" class="social-link"> <i class="fab fa-instagram"></i> </a> <a href="#" class="social-link"> <i class="fab fa-linkedin"></i> </a> <a href="#" class="social-link"> <i class="fab fa-whatsapp"></i> </a> <a href="#" class="social-link"> <i class="fab fa-youtube"></i> </a> </div> </div> <div class="footer-section"> <h4>Serviços</h4> <ul class="footer-links"> <li><a href="#">Aulas Particulares</a></li> <li><a href="#">Preparação para ENEM</a></li> <li><a href="#">Reforço Escolar</a></li><li><a href="#">Relatório de acompanhamento</a></li> <li><a href="#">Sessões com Psicopedagoga</a></li> <li><a href="#">Aulas Online</a></li> </ul> </div> <div class="footer-section"> <h4>Disciplinas</h4> <ul class="footer-links"> <li><a href="#">Matemática</a></li> <li><a href="#">Física</a></li> <li><a href="#">Química</a></li> <li><a href="#">Portugês</a></li> <li><a href="#">Geografia</a></li> <li><a href="#">História</a></li> <li><a href="#">Biologia</a></li> <li><a href="#">Inglês</a></li> <li><a href="#">Espanhol</a></li> <li><a href="#">Filosofia</a></li> </ul> </div> <div class="footer-section"> <h4>Contato</h4> <div class="contact-info"> <div class="contact-item"> <i class="fas fa-phone"></i> <span>(71) 99999-9999</span> </div> <div class="contact-item"> <i class="fas fa-envelope"></i> <span>contato@clickdosaber.com</span> </div> <div class="contact-item"> <i class="fas fa-map-marker-alt"></i> <span>Salvador, BA - Brasil</span> </div> </div> </div> </div> <div class="footer-bottom"> <div class="footer-bottom-content"> <p>&copy; 2025 Click do Saber. Todos os direitos reservados.</p> <div class="footer-bottom-links"> <a href="#">Política de Privacidade</a> <a href="#">Termos de Uso</a> <a href="#">Cookies</a> </div> </div> </div> </div> </footer>
 
     <script>
         // ===== MENU HAMBURGUER SIMPLES (Nova Implementação) =====
