retirada sessão  professores e ajuste textos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                     <li><a href="#about">Quem Somos</a></li>
                     <li><a href="#features">Recursos</a></li>
                     <li><a href="#services">Serviços</a></li>
-                    <li><a href="#professors">Professores</a></li>
                     <li><a href="#contact">Contato</a></li>
                     <li class="nav-item-social"><a href="#" class="social-icon"><i class="fab fa-instagram"></i></a></li>
                 </ul>
@@ -35,9 +34,9 @@
 
     <section class="hero" id="home">
         <div class="hero-content">
-            <h1>O primeiro acompanhamento com relatorios e personalização para cada aluno.</h1>
+            <h1>O primeiro acompanhamento com relatórios e personalização para cada aluno.</h1>
             <br><p> <span>Flexibilidade</span>, <span>qualidade</span> e <span>acessibilidade</span>.</p>
-            <a href="#contact" class="cta-button">
+            <a href="https://wa.me/5575999271695?text=Ol%C3%A1%2C%20queria%20conhecer%20mais%20sobre%20o%20acompanhamento%20de%20voc%C3%AAs." class="cta-button">
                 <i class=""></i> Quero Matricular Meu Filho
             </a>
         </div>
@@ -67,8 +66,8 @@
                 </div>
                 <div class="feature-card animate-on-scroll">
                     <div class="feature-icon"><i class="fas fa-laptop"></i></div>
-                    <h3>Aulas Online</h3>
-                    <p>Flexibilidade total para estudar de qualquer lugar, a qualquer hora.</p>
+                    <h3>Aulas ao vivo</h3>
+                    <p>Todas as aulas são realizadas ao vivo, com um simples agendamento</p>
                 </div>
                 <div class="feature-card animate-on-scroll">
                     <div class="feature-icon"><i class="fas fa-graduation-cap"></i></div>
@@ -117,25 +116,7 @@
         </div>
     </section>
 
-    <section class="professors-section" id="professors">
-        <div class="professors-container">
-            <h2 class="professors-title"><i class="fas fa-hand-pointer"></i> CONHEÇA NOSSOS PROFESSORES</h2>
-            <div class="professors-grid">
-                <div class="professor-card animate-on-scroll">
-                    <img src="fotocaio.jpg" alt="Foto da Professora" class="professor-image">
-                    <div class="professor-overlay">
-                        <p class="professor-description">Mestrando em História, com pós-graduação em Docência Online, dedicado a transformar o mundo da educação.</p>
-                    </div>
-                
-                </div>
-                <div class="professor-card animate-on-scroll">
-                    <img src="fotocaio.jpg" alt="Foto da Professora" class="professor-image">
-                    <div class="professor-overlay">
-                        <p class="professor-description">Mestrando em História, com pós-graduação em Docência Online, dedicado a transformar o mundo da educação.</p>
-                    </div>
-            </div>
-        </div>
-    </section>
+    <!-- Seção "Conheça nossos professores" removida conforme solicitado -->
 
     <section class="cta-section" id="contact">
         <div class="cta-container">
@@ -281,3 +262,4 @@
     </script>
 </body>
 </html>
+// ...existing code...
