mensagem pre definida whatsapp

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="max-w-6xl mx-auto flex items-center justify-between px-6 py-4">
         <img src="LOGO-2 (1).png" class="h-14" alt="Click do Saber">
 
-        <a href="https://wa.me/5575999271695" 
+        <a href="https://wa.me/5575999271695?text=Quero%20conhecer%20melhor%20o%20acompanhamento%20da%20Click" 
            class="bg-secondary text-white px-6 py-2 rounded-full font-bold shadow hover:scale-105 transition">
             Falar no WhatsApp
         </a>
@@ -71,7 +71,7 @@
                 </li>
             </ul>
 
-            <a href="https://wa.me/5575999271695"
+            <a href="https://wa.me/5575999271695?text=Quero%20conhecer%20melhor%20o%20acompanhamento%20da%20Click"
                class="mt-10 inline-block bg-secondary text-white text-xl px-10 py-5 rounded-xl font-bold shadow-lg hover:scale-105 transition">
                 Quero entender o que está acontecendo
             </a>
@@ -105,7 +105,7 @@
             </video>
         </div>
 
-        <a href="https://wa.me/5575999271695"
+        <a href="https://wa.me/5575999271695?text=Quero%20conhecer%20melhor%20o%20acompanhamento%20da%20Click"
            class="mt-10 inline-block bg-secondary text-white px-12 py-5 rounded-full text-lg font-extrabold shadow hover:scale-105 transition">
             Falar com um especialista agora
         </a>
@@ -145,7 +145,7 @@
         Seu filho não está errado. Ele só aprende diferente.
     </h2>
 
-    <a href="https://wa.me/5575999271695"
+    <a href="https://wa.me/5575999271695?text=Quero%20conhecer%20melhor%20o%20acompanhamento%20da%20Click"
        class="inline-block bg-secondary text-white px-12 py-5 rounded-full text-xl font-extrabold shadow hover:scale-105 transition">
         Conversar agora
     </a>
