--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <header class="sticky top-0 bg-white border-b z-50">
     <div class="max-w-6xl mx-auto flex items-center justify-between px-6 py-4">
-        <img src="LOGO-2 (1).png" class="h-14" alt="Click do Saber">
+        <img src="ISOTIPO-2.png" class="h-14" alt="Click do Saber">
 
         <a href="https://wa.me/5575999271695?text=Quero%20conhecer%20melhor%20o%20acompanhamento%20da%20Click" 
            class="bg-secondary text-white px-6 py-2 rounded-full font-bold shadow hover:scale-105 transition">
